added the frontend pages